<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="Accueil" />
    <item
        android:id="@+id/journalFragment"
        android:icon="@drawable/ic_journal"
        android:title="@string/title_journal" />
    <item
        android:id="@+id/helpFragment"
        android:icon="@drawable/ic_help"
        android:title="@string/title_help" />
    <item
        android:id="@+id/positiveFragment"
        android:icon="@drawable/ic_positive"
        android:title="@string/title_positive" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />
</menu>
